[package]
name = "ctx"
description = "manage project research, tasks, and other things at the command line"
version = "0.0.1"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/ctx"
repository = "https://github.com/EthanJustice/ctx"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"